--- a/SPP3/SPP3/Views/MainWindow.xaml
+++ b/SPP3/SPP3/Views/MainWindow.xaml
@@ -20,15 +20,20 @@
             </MenuItem>
             <MenuItem x:Name="menu_About" Header="О Программе" AutomationProperties.Name="menu_About" Command="{Binding AboutApp}"/>
         </Menu>
-        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="440" Margin="3,20,-3,0" VerticalAlignment="Top" Width="389" BorderBrush="{x:Null}" ScrollViewer.HorizontalScrollBarVisibility="Visible" ItemsSource="{Binding Tabs}">
+        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="440" Margin="0,20,0,0" VerticalAlignment="Top" Width="389" BorderBrush="{x:Null}" ScrollViewer.HorizontalScrollBarVisibility="Visible" ItemsSource="{Binding Tabs}">
+            <TabControl.SelectedIndex >
+                <Binding Path="SelectedTab"/>
+            </TabControl.SelectedIndex>
             <TabControl.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Path=Header}"/>
+                <DataTemplate >
+                    <TextBlock Text="{Binding Path=Header}">
+                        
+                    </TextBlock>
                 </DataTemplate>
             </TabControl.ItemTemplate>
             <TabControl.ContentTemplate>
                 <DataTemplate>
-                    <Grid Background="White"/>
+                    <Grid Background="WhiteSmoke"/>
                 </DataTemplate>
             </TabControl.ContentTemplate>
         </TabControl>
