--- a/SPP3/SPP3/Views/Edit.xaml
+++ b/SPP3/SPP3/Views/Edit.xaml
@@ -11,15 +11,15 @@
         <Grid.BindingGroup>
             <BindingGroup/>
         </Grid.BindingGroup>
-        <Button x:Name="button" Content="Завершить" Height="26" Margin="82,131,0,0" Width="84" VerticalAlignment="Top" HorizontalAlignment="Left" Command="{Binding Check}"/>
+        <Button x:Name="button" Content="Завершить" Height="26" Margin="82,131,0,0" Width="84" VerticalAlignment="Top" HorizontalAlignment="Left" Command="{Binding Check}" IsEnabled="{Binding Active}"/>
         <Label x:Name="label" Content="Name" HorizontalAlignment="Left" Height="24" Margin="10,10,0,0" VerticalAlignment="Top" Width="51"/>
-        <Label x:Name="label_Copy" Content="Package" HorizontalAlignment="Left" Height="29" Margin="10,39,0,0" VerticalAlignment="Top" Width="55"/>
-        <Label x:Name="label_Copy1" Content="Time" HorizontalAlignment="Left" Height="24" Margin="10,68,0,0" VerticalAlignment="Top" Width="51"/>
+        <Label x:Name="label_Copy" Content="Time" HorizontalAlignment="Left" Height="29" Margin="10,39,0,0" VerticalAlignment="Top" Width="55"/>
+        <Label x:Name="label_Copy1" Content="Package" HorizontalAlignment="Left" Height="29" Margin="10,68,0,0" VerticalAlignment="Top" Width="55"/>
         <Label x:Name="label_Copy2" Content="Parameters count" HorizontalAlignment="Left" Height="24" Margin="10,97,0,0" VerticalAlignment="Top" Width="102"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="18" Margin="138,16,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Text="{Binding Path=Name}"/>
-        <TextBox x:Name="textBox_Copy" HorizontalAlignment="Left" Height="18" Margin="138,74,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Text="{Binding Path=Package}"/>
-        <TextBox x:Name="textBox_Copy1" HorizontalAlignment="Left" Height="18" Margin="138,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Text="{Binding Path=Time}"/>
-        <TextBox x:Name="textBox_Copy2" HorizontalAlignment="Left" Height="18" Margin="138,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Text="{Binding Path=ParamsCount}"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="18" Margin="138,16,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Text="{Binding Path=Name}" TextChanged="textBox_TextChanged"/>
+        <TextBox x:Name="textBox_Copy" HorizontalAlignment="Left" Height="18" Margin="138,74,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Text="{Binding Path=Package}" TextChanged="textBox_TextChanged"/>
+        <TextBox x:Name="textBox_Copy1" HorizontalAlignment="Left" Height="18" Margin="138,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Text="{Binding Path=Time}" TextChanged="textBox_TextChanged"/>
+        <TextBox x:Name="textBox_Copy2" HorizontalAlignment="Left" Height="18" Margin="138,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="94" Text="{Binding Path=ParamsCount}" TextChanged="textBox_TextChanged"/>
 
     </Grid>
 </Window>
